fix menu paddings, add height and add overflow to sections

--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -8,6 +8,7 @@ body {
 .wrapper {
     width: 1120px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .logo {
@@ -17,7 +18,6 @@ body {
     float:left;
     text-transform: uppercase;
     margin:0;
-    padding: 19px 0;
 }
 
 .logo:first-letter {
@@ -27,28 +27,27 @@ body {
 }
 
 header {
-    padding-top: 32px;
-    padding-bottom: 141.8px;
+    height: 122px;
 }
 
 .menu {
-    display: block;
     float: right;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 
 }
 
 .menu-list {
     margin: 0;
-    padding: 14px 0;
+    overflow: hidden;
 }
 
 .menu-item {
-    display: inline-block;
+    float: left;
     font-size: 14px;
     list-style: none;
-    padding:12.6px;
+    margin:14px;
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
     text-transform: uppercase;
@@ -58,28 +57,29 @@ header {
 a {
     text-decoration: none;
     color: #0f0101;
-    cursor: pointer;
 }
 
-a:hover {
+.menu-item a:hover {
     color: #1abc9c;
 }
 
-.sgallery {
-    clear: both;
-    padding-bottom: 116px;
+.gallery {
+    padding-bottom: 30px;
+    width: 100%;
+}
+
+.gallery-cards {
     overflow: hidden;
+    font-size: 0;
 }
 
 .section-title {
     font-family: "Roboto", sans-serif;
-    font-weight: 900;
     font-size: 48px;
     color: #555252;
     text-align: center;
     letter-spacing: -1px;
     text-transform: uppercase;
-    clear: both;
     position: relative;
 }
 
@@ -102,15 +102,25 @@ a:hover {
 
 .product-card {
     float: left;
-    margin-right: 30px;
+    margin-right: 33px;
     margin-bottom: 30px;
     margin-left: 0;
-    font-size:0;
     max-height: 323px;
 }
 
 .product-card:nth-child(4n+4) {
     margin-right:0;
+}
+
+.second-line-cards .product-card{
+    margin-bottom: 0;
+}
+
+.first-line-cards {
+    overflow: hidden;
+}
+.second-line-cards {
+    overflow: hidden;
 }
 
 .product-card:hover {
@@ -188,13 +198,15 @@ a:hover {
     height: 7px;
 }
 
+.articles {
+    overflow: hidden;
+}
 
 .blog-article {
-    width:100%;
-    max-width: 350px;
-    font-size: 0;
     float: left;
-    margin-right: 30px;
+    width:100%;
+    max-width: 351px;
+    margin-right: 33.5px;
 
 }
 
